--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Hello World!</h1>
   <!-- All of the Node.js APIs are available in this renderer process. -->
   We are using Node.js
-  <script>document.write(process.versions.node)</script>,
+  <script>document.write(process.env.node)</script>,
   Chromium
   <script>document.write(process.versions.chrome)</script>,
   and Electron
