Added login page, rollup and electron ipc comms

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello World!!</title>
+  <script src="build/login.js"></script>
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
 <body>
   <h1>YOU GOT PENDING REVIEWS</h1>
+  <img class="logo" src="assets/logo.png" alt="logo.png" />
+  <login-element></login-element>
 </body>
 
 </html>
