--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Hello World!!</title>
+  <title>ReviewMe</title>
   <script src="build/main.js"></script>
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
