Fixed build issues and added app icon

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>ReviewMe</title>
-  <base href="./">
-  <script src="/build/main.js"></script>
+  <script src="./build/main.js"></script>
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
